src/objects/SOFA_Job__c.object
<CustomObject>
    <fields>
        <fullName>CountStart__c</fullName>
        <label>Count Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CountStop__c</fullName>
        <label>Count Stop</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobCount__c</fullName>
        <label>Job Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobErrors__c</fullName>
        <label>Job Errors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobItemsTotal__c</fullName>
        <label>Job Items Total</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobItems__c</fullName>
        <label>Job Items</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobStart__c</fullName>
        <label>Job Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>Job Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStop__c</fullName>
        <label>Job Stop</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>ObjectAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soql__c</fullName>
        <label>Soql</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <label>SOFA Job</label>
    <nameField>
        <label>SOFA_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOFA Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>